infrastructure/k8s/04-ml-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-anomaly-service
  namespace: securify-ai
spec:
  replicas: 2 # Start with 2, HPA will scale this
  selector:
    matchLabels:
      app: ml-anomaly-service
  template:
    metadata:
      labels:
        app: ml-anomaly-service # Used by NetworkPolicy
    spec:
      containers:
      - name: worker
        # The CI/CD pipeline replaces this tag
        image: my-registry.com/securify-ai/ml-anomaly-service:latest
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5000 # The Flask port
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /readyz
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 10
